--- a/lia2Proj/css/Ongoing.css
+++ b/lia2Proj/css/Ongoing.css
@@ -1,29 +1,21 @@
-/* Navbar styling */
-.navbar {
-  width: 100%;
-  background-color: #f8f9fa;
-  text-align: center;
+/* General styling */
+body {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .navbar a {
-  text-decoration: none;
-  font-size: 16px;
+  font-size: 20px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-/* General styling */
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+.dropdown-menu a {
+  font-size: 15px;
 }
 
 /* Header styling */
 header {
   text-align: center;
   padding: 20px;
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
 }
 
 /* Alert box */
@@ -36,7 +28,28 @@ header {
   border-radius: 5px;
 }
 
+/* Footer styling */
 .footer-text {
+  color: #fff;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  line-height: 50px;
+  background-color: #222;
+  font-size: x-large;
   margin: auto;
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  padding-left: 100px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+@media (min-width: 992px) {
+  .navbar-expand-lg .navbar-nav .nav-link {
+    display: block; /* Gör så att alla nav-länkar är synliga */
+  }
+}
+
+@media (max-width: 992px) {
+  .navbar-expand-lg .navbar-collapse {
+    display: block !important; /* Gör navbaren alltid synlig på små skärmar */
+  }
 }
