--- a/lia2Proj/css/Ongoing.css
+++ b/lia2Proj/css/Ongoing.css
@@ -1,55 +1,4 @@
-/* General styling */
-body {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-
-.navbar a {
-  font-size: 20px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-.dropdown-menu a {
-  font-size: 15px;
-}
-
-/* Header styling */
-header {
-  text-align: center;
-  padding: 20px;
-}
-
-/* Alert box */
-#driftBox {
-  max-width: 600px;
-  margin: 20px auto;
-  padding: 15px;
-  background-color: #cce5ff;
-  border: 1px solid #b8daff;
-  border-radius: 5px;
-}
-
-/* Footer styling */
-.footer-text {
-  color: #fff;
-  position: fixed;
-  width: 100%;
-  bottom: 0;
-  line-height: 50px;
-  background-color: #222;
-  font-size: x-large;
-  margin: auto;
-  padding-left: 100px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-@media (min-width: 992px) {
-  .navbar-expand-lg .navbar-nav .nav-link {
-    display: block; /* Gör så att alla nav-länkar är synliga */
-  }
-}
-
-@media (max-width: 992px) {
-  .navbar-expand-lg .navbar-collapse {
-    display: block !important; /* Gör navbaren alltid synlig på små skärmar */
-  }
+.flex-container {
+  background-color: #fdfdfd;
+  border: 3px solid #ea9216e3;
 }
