--- a/lia2Proj/css/Malfunctions.css
+++ b/lia2Proj/css/Malfunctions.css
@@ -61,17 +61,19 @@ header {
   line-height: 2.0;
 }
 
-.lamp {
-  width: 15px;            /* Storlek på lampan */
-  height: 15px;           /* Storlek på lampan */
-  background-color: #fb0a0a;  /* Lampa färg (gul här, kan ändras) */
-  border-radius: 100%;     /* Gör den rund */
-  box-shadow: 0 0 5px 5px rgb(255, 0, 0); /* Skugga för lampa-effekt */
-  margin-left: auto;
-  margin-right: 20px;
-  margin-top: 10px;
+.lamp-container {
+  display: flex;
+  align-items: center; /* Detta justerar lampan och texten så att de är i linje */
 }
 
+.lamp {
+  width: 15px; /* Justera storleken på lampan */
+  height: 15px;
+  background-color: red; /* Här kan du välja färg på lampan */
+  box-shadow: 0 0 2px 2px rgb(255, 0, 0); /* Skugga för lampa-effekt */
+  border-radius: 50%; /* Gör lampan rund */
+  margin-right: 10px; /* Lägger till lite mellanrum mellan lampan och texten */
+}
 
 @media (min-width: 992px) {
   .navbar-expand-lg .navbar-nav .nav-link {
