--- a/lia2Proj/css/Upcoming.css
+++ b/lia2Proj/css/Upcoming.css
@@ -2,18 +2,30 @@ body {
     overflow-x: hidden; /* Förhindra horisontell scroll */
 }
 
-.lamp-container {
+.lamp-container3 {
   display: flex;
   align-items: center; /* Detta justerar lampan och texten så att de är i linje */
 }
 
-.lamp {
+.lamp3 {
   width: 15px; /* Justera storleken på lampan */
   height: 15px;
   background-color: #33106e; /* Här kan du välja färg på lampan */
   box-shadow: 0 0 2px 2px #33106e; /* Skugga för lampa-effekt */
   border-radius: 50%; /* Gör lampan rund */
   margin-right: 10px; /* Lägger till lite mellanrum mellan lampan och texten */
+}
+
+.flex-container3 {
+  display: flex;
+  flex-direction: column;
+  background-color: #fdfdfd;
+  border: 3px solid #33106e;
+  border-radius: 10px;
+  max-width: 400px;
+  margin: 20px auto;
+  margin-bottom: 80px; /* Skapar utrymme så att den inte hamnar bakom footern */
+  padding: 15px;
 }
 
 #createUpcomingBtn {
