--- a/lia2Proj/css/Finished.css
+++ b/lia2Proj/css/Finished.css
@@ -1,3 +1,10 @@
+html, body {
+  height: 100%;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+}
+
 .flex-container4 {
   display: flex;
   flex-direction: column;
@@ -32,4 +39,8 @@
 
 .table-bordered td {
   border: 2px solid #36a016; /* Grön border för cellerna */
+}
+
+footer {
+  margin-top: auto;
 }
