--- a/lia2Proj/css/Upcoming.css
+++ b/lia2Proj/css/Upcoming.css
@@ -38,6 +38,7 @@ body {
   cursor: pointer; /* Gör att markören blir en pekare när man hovrar över */
   transition: background-color 0.3s ease; /* Smidig övergång vid hover */
   font-size: small;
+  margin-left: 180vh;
 }
 
 #createUpcomingBtn:hover {
@@ -50,6 +51,7 @@ body {
 }
 
 #calendar {
-  padding-right: 150vh;
-  font-size: xx-small;
+  float: left;
+  font-size: small;
+  padding-left: 20px;
 }
