--- a/lia2Proj/css/Upcoming.css
+++ b/lia2Proj/css/Upcoming.css
@@ -47,7 +47,7 @@ body {
 
 .flex-container {
   background-color: #fdfdfd;
-  border: 3px solid #370f7e;
+  border: 3px solid #33106e;
 }
 
 #calendar {
