--- a/lia2Proj/css/Ongoing.css
+++ b/lia2Proj/css/Ongoing.css
@@ -1,18 +1,29 @@
-.flex-container2 {
+.flex-wrapper2 {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap; /* Om du vill att de radbryts om det blir trångt */
+  justify-content: center;
+  gap: 50px; /* Avstånd mellan boxarna */
+  padding-bottom: 10px;
+  margin-bottom: 30px;
+}
+
+.flex-item2 {
   background-color: #fdfdfd;
   border: 3px solid #f8c621e3;
-  border-radius: 10px;
-  max-width: 400px;
-  margin: 20px auto;
-  margin-bottom: 80px; /* Skapar utrymme så att den inte hamnar bakom footern */
-  padding: 15px;
+  border-radius: 40px;
+  padding: 20px;
+  font-family: "Telge Sans", Helvetica, Arial;
+  transition: all 0.3s ease; /* Gör alla förändringar smidiga */
+  opacity: 1;
+  overflow: hidden;
+  font-size: small;
 }
 
 .lamp-container2 {
   display: flex;
   align-items: center; /* Detta justerar lampan och texten så att de är i linje */
+  font-size: small;
+  font-family: "Telge Sans", Helvetica, Arial;
 }
 
 .lamp2 {
@@ -22,4 +33,14 @@
   box-shadow: 0 0 2px 2px #f8c621e3; /* Skugga för lampa-effekt */
   border-radius: 50%; /* Gör lampan rund */
   margin-right: 10px; /* Lägger till lite mellanrum mellan lampan och texten */
+}
+
+.orangecollapsebar {
+  transition: transform 0.3s ease;
+}
+
+#orangetoggleCollapse {
+  padding: 4px 8px;
+  background-color: white;
+  border: none;
 }
