--- a/lia2Proj/css/Malfunctions.css
+++ b/lia2Proj/css/Malfunctions.css
@@ -1,5 +1,13 @@
-body {
+html, body {
   font-family: "Telge Sans", Helvetica, Arial;
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.page-wrapper {
+  flex: 1;
 }
 
 .navbar a {
@@ -49,8 +57,7 @@ h3 {
   flex-wrap: wrap; /* Om du vill att de radbryts om det blir trångt */
   justify-content: center;
   gap: 50px; /* Avstånd mellan boxarna */
-  padding-bottom: 10px;
-  margin-bottom: 30px;
+  padding-bottom: 100px;
 }
 
 .flex-item1 {
@@ -59,9 +66,9 @@ h3 {
   border-radius: 40px;
   padding: 20px;
   font-family: "Telge Sans", Helvetica, Arial;
-  transition: all 0.3s ease; /* Gör alla förändringar smidiga */
   opacity: 1;
   overflow: hidden;
+  transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
 /* När elementet är kollapsat */
@@ -262,4 +269,15 @@ h3 {
   visibility: hidden; /* Dölj elementet men behåll dess utrymme */
   height: 0; /* Sätt höjden till 0 för att minimera påverkan */
   overflow: hidden; /* Dölj innehåll som inte får plats */
+}
+
+.moving {
+  transform: scale(1.02);
+  opacity: 0.7;
+}
+
+.moveBtn {
+  font-size: 12px;
+  padding: 6px 12px;
+  border-radius: 8px;
 }
