--- a/lia2Proj/css/Ongoing.css
+++ b/lia2Proj/css/Ongoing.css
@@ -13,7 +13,7 @@
   border-radius: 40px;
   padding: 20px;
   font-family: "Telge Sans", Helvetica, Arial;
-  transition: all 0.3s ease; /* Gör alla förändringar smidiga */
+  transition: transform 0.3s ease, opacity 0.3s ease;
   opacity: 1;
   overflow: hidden;
   font-size: small;
